--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "react": "^19.1.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^19.1.0",
     "react-player": "^2.16.0",
     "react-scripts": "5.0.1",
+    "react-viewport-hooks": "^1.5.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
