--- a/src/resources/ProjectInfo.json
+++ b/src/resources/ProjectInfo.json
@@ -1,21 +1,21 @@
 [
     {
         "path": "/driving-simulator",
-        "title": "3D Multiplayer Driving Simulator through Godot",
+        "title": "Master Drive",
         "video": "https://youtu.be/9y5wvXi1GQc",
         "content": "Thie is a multiplayer driving simulator",
         "img": "DriveMaster.png"
     },
     {
         "path": "/study-war",
-        "title": "2D Roguelike game",
+        "title": "Study War",
         "video": "https://youtu.be/atSQNczFSOY",
         "content": "This is a Rougelike game",
         "img": "StudyWar.png"
     },
     {
         "path": "/library-admin-system",
-        "title": "Java Library Management System Demonstration",
+        "title": "Library Management System",
         "video": "https://youtu.be/8bH0QCbVa1Y",
         "content": "This is a Library Management System, written in Java and OOP",
         "img": "LibraryManagementSystem.png"
@@ -40,5 +40,40 @@
         "video": "https://youtu.be/JPNvxK6WqMM",
         "content": "Allows user to insert and delete icons which moves around the screen and bounce back upon hitting the edge of the screen",
         "img": "AndroidApp.png"
+    },
+    {
+        "path": "/infinity-glass",
+        "title": "Infinity-glass PV",
+        "video": "https://youtu.be/WjW6a7ZGf7A",
+        "content": "This is a promotion video for promoting a conceptial product, the infinity-glass",
+        "img": "InfinityGlasses.png"
+    },
+    {
+        "path": "/welfare-system-of-europe",
+        "title": "Welfare System of Europe",
+        "video": "https://youtu.be/5QMFE3sMulw",
+        "content": "This is a presentation video for an academic project, discussing the welfare system in the West",
+        "img": "WelfareSystem.png"
+    },
+    {
+        "path": "/toohak-3D",
+        "title": "Toohak 3D",
+        "video": "https://youtu.be/6NQb9DSFOFw",
+        "content": "This is a 3D Unity game",
+        "img": "Toohak3D.png"
+    }, 
+    {
+        "path": "/back-to-the-past",
+        "title": "Back To The Past PV",
+        "video": "https://youtu.be/lwVbI44llqI",
+        "content": "This is a 3D animation, produced in Blender",
+        "img": "BackToThePast.png"
+    },
+    {
+        "path": "/cobra-maneuver",
+        "title": "Cobra maneuver",
+        "video": "https://youtu.be/mwkN7_QfB78",
+        "content": "This is a 3D animation, produced in 3DSMax",
+        "img": "CobraManeuver.png"
     }
 ]
