--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "antd": "^5.24.8",
+    "katex": "^0.16.10",
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.31",
     "react": "^19.1.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.1.0",
     "react-latex": "^2.0.0",
     "react-player": "^2.16.0",
+    "react-router": "^7.5.2",
     "react-scripts": "5.0.1",
     "react-viewport-hooks": "^1.5.0",
     "typescript": "^4.9.5",
