--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-player": "^2.16.0",
     "react-router": "^7.5.2",
     "react-scripts": "5.0.1",
+    "react-unity-webgl": "^9.8.0",
     "react-viewport-hooks": "^1.5.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
